--- a/maria clara/index.html
+++ b/maria clara/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="images.jpeg" alt="logo da alura start">
+       <header class="cabecalho">
+        <img class="cabecalho-imagem" src="images.jpeg" alt="logo do colégio maluf">
     
         <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">MALUF</li>
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
+
 
 </body>
 </html>
